--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "NODE_ENV=test mocha 'tests/**/*.test.js'"
   },
+  "bin": {
+    "contentful-update": "./cli.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
