--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^4.1.0",
-    "contentful-management": "^5.12.0",
-    "contentful-migration": "^1.0.9",
+    "commander": "5.1.0",
+    "contentful-management": "5.27.3",
+    "contentful-migration": "1.1.14",
     "glob-promise": "^3.4.0",
-    "winston": "^3.2.1"
+    "winston": "3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.8.0",
-    "mocha": "^7.0.0",
+    "eslint": "7.4.0",
+    "mocha": "8.0.1",
     "mockery": "^2.1.0",
-    "prettier": "^1.19.1",
+    "prettier": "2.0.5",
     "proxyquire": "^2.1.3",
-    "rewire": "^4.0.1",
-    "sinon": "^8.1.1"
+    "rewire": "5.0.0",
+    "sinon": "9.0.2"
   }
 }
